# ai-core-utils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: validation.yml
cfg/: cfg.yml
reports/: process_trace.puml
src/core/: airflow.py  alerting.py  config.py  diagram_renderer.py  logging.py  monitoring.py  plantuml_tracer.py
src/core/connectors/: aws.py  azure.py  postgres.py  salesforce.py  snowflake.py  sqlite.py
tests/: conftest.py  test_alerting.py  test_config.py  test_logging.py  test_monitoring.py  test_postgres.py
